2005-11-28  Matthias Wimmer  <m@tthias.net>

    * jabberd/lib/jabberdlib.h: xml:lang support in xmlnode
    * jabberd/lib/xmlnode.c: same
    * jabberd/jabberd.h: xml:lang support on streams
    * jabberd/mio_xml.c: same

2005-11-27  Matthias Wimmer  <m@tthias.net>

    * dialback/dialback.c: namespace handling updates
    * dialback/dialback_in.c: same
    * dialback/dialback_out.c: same
    * jabberd/jabberd.h: same
    * jabberd/mio.c: same
    * jabberd/base/base_accept.c: same
    * jabberd/base/base_connect.c: same
    * jabberd/lib/xmlnode.c: same
    * jabberd/lib/jabberdlib.h: same
    * pthsock/client.c: same

2005-11-26  Matthias Wimmer  <m@tthias.net>

    * jabberd/base/base_dynamic.c: removed base_dynamic and base_exec handlers
    * jabberd/base/base_exec.c: same
    * jabberd/static.c: same
    * jabberd/lib/jabberdlib.h: making xmlnode aware of namespaces
    * jabberd/lib/xmlnode.c: same
    * jabberd/lib/xstream.c: making xstream compatible with ns-handling
    * jabberd/base/base_connect.c: updates for changed xstream
    * jabberd/base/base_accept.c: same
    * jabberd/base/base_stdout.c: same
    * dialback/dialback_in.c: same
    * dialback/dialback_out.c: same
    * pthsock/client.c: same

2005-11-25  Matthias Wimmer  <m@tthias.net>

    * xdb_sql/xdb_sql.c: allow to execute an SQL statement on db (re)connect
    * jsm/modules/mod_register.c: allow changing password, and deleting
	accounts even when registering accounts is disabled

2005-11-23  Matthias Wimmer  <m@tthias.net>

    * jabberd/lib/xmlnode.c: documentation, making some functions internal
    * jabberd/lib/jabberdlib.h: same
    * jabberd/lib/jid.c: removing unused function jid_xres

2005-11-21  Matthias Wimmer  <m@tthias.net>

    * jabberd/lib/jabberdlib.h: introducing xhash_get_by_domain()
    * jabberd/lib/xhash.c: same
    * dialback/dialback.h: same
    * dialback/dialback.c: same
    * dialback/dialback_in.c: same
    * dialback/dialback_out.c: same