@@ -4,6 +4,7 @@
     * jabberd/lib/xmlnode.c: same
     * jabberd/jabberd.h: xml:lang support on streams
     * jabberd/mio_xml.c: same
+    * jabberd/lib/expat.c: parsing strings and files namespace aware
 
 2005-11-27  Matthias Wimmer  <m@tthias.net>
 
